Make page more responsive and add mobile menu functionality

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             <li class="nav-link"><a href="#">Support</a></li>
           </ul>
         </nav>
+        <div class="mobile">
+          <button>
+            <svg width="24" height="16" xmlns="http://www.w3.org/2000/svg">
+              <g fill="#FFF" fill-rule="evenodd">
+                <path d="M0 0h24v2H0zM0 7h24v2H0zM0 14h24v2H0z" />
+              </g>
+            </svg>
+          </button>
+        </div>
       </div>
       <div>
         <h1 class="title">Immersive experiences that deliver</h1>
@@ -40,14 +49,18 @@
       <section class="interactive">
         <picture>
           <source
-            media="(max-width: 799px)"
+            media="(max-width: 752px)"
             srcset="images/mobile/image-interactive.jpg"
           />
           <source
-            media="(min-width: 800px)"
+            media="(min-width: 753px)"
             srcset="images/desktop/image-interactive.jpg"
           />
-          <img src="images/desktop/image-interactive.jpg" alt="" />
+          <img
+            src="images/desktop/image-interactive.jpg"
+            alt=""
+            class="interactive-image"
+          />
         </picture>
         <div class="interactive-text">
           <h2 class="section-heading interactive-section">
@@ -71,16 +84,17 @@
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-deep-earth.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-deep-earth.jpg"
             />
             <img
               src="images/desktop/image-deep-earth.jpg"
               alt="Picture of Earth from space"
+              class="creation-image"
             />
           </picture>
           <span class="project-title deep-earth">Deep earth</span>
@@ -88,98 +102,126 @@
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-night-arcade.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-night-arcade.jpg"
             />
-            <img src="images/desktop/image-night-arcade.jpg" alt="" />
+            <img
+              src="images/desktop/image-night-arcade.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">Night arcade</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-soccer-team.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-soccer-team.jpg"
             />
-            <img src="images/desktop/image-soccer-team.jpg" alt="" />
+            <img
+              src="images/desktop/image-soccer-team.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">Soccer team VR</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-grid.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-grid.jpg"
             />
-            <img src="images/desktop/image-grid.jpg" alt="" />
+            <img
+              src="images/desktop/image-grid.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title the-grid">The grid</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-from-above.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-from-above.jpg"
             />
-            <img src="images/desktop/image-from-above.jpg" alt="" />
+            <img
+              src="images/desktop/image-from-above.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">From up above VR</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-pocket-borealis.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-pocket-borealis.jpg"
             />
-            <img src="images/desktop/image-pocket-borealis.jpg" alt="" />
+            <img
+              src="images/desktop/image-pocket-borealis.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">Pocket borealis</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-curiosity.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-curiosity.jpg"
             />
-            <img src="images/desktop/image-curiosity.jpg" alt="" />
+            <img
+              src="images/desktop/image-curiosity.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">The curiosity</span>
         </div>
         <div class="creation">
           <picture>
             <source
-              media="(max-width: 799px)"
+              media="(max-width: 752px)"
               srcset="images/mobile/image-fisheye.jpg"
             />
             <source
-              media="(min-width: 800px)"
+              media="(min-width: 753px)"
               srcset="images/desktop/image-fisheye.jpg"
             />
-            <img src="images/desktop/image-fisheye.jpg" alt="" />
+            <img
+              src="images/desktop/image-fisheye.jpg"
+              alt=""
+              class="creation-image"
+            />
           </picture>
           <span class="project-title">Make it fisheye</span>
         </div>
